--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^6.0.2",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/messaging": "^12.8.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-push-notification": "^8.1.0",
     "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
