--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,6 +33,7 @@ allprojects {
         }
 
         google()
-        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://www.jitpack.io'
+        url "http://tokbox.bintray.com/maven" }
     }
 }
