--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,8 @@ target 'dateproject' do
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
+  pod 'opentok-react-native', :path => '../node_modules/opentok-react-native'
+
   target 'dateprojectTests' do
     inherit! :complete
     # Pods for testing
