--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ]
   },
   "dependencies": {
+    "opentok": "^2.12.1",
     "opentok-react-native": "^0.18.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
