--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@react-native-community/netinfo": "^6.0.2",
     "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/firestore": "^12.8.0",
     "@react-native-firebase/messaging": "^12.8.0",
+    "express": "^4.17.1",
+    "firebase-admin": "^9.11.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-push-notification": "^8.1.0",
