--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,12 @@ target 'dateproject' do
 
   pod 'RNFBFirestore', :path => '../node_modules/@react-native-firebase/firestore'
 
+  pod 'react-native-onesignal', :path => '../node_modules/react-native-onesignal'
+
+  pod 'RNSoundPlayer', :path => '../node_modules/react-native-sound-player'
+
+  pod 'react-native-background-timer', :path => '../node_modules/react-native-background-timer'
+
   target 'dateprojectTests' do
     inherit! :complete
     # Pods for testing
