--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "firebase-admin": "^9.11.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-background-timer": "^2.4.1",
+    "react-native-onesignal": "^4.3.1",
     "react-native-push-notification": "^8.1.0",
+    "react-native-sound-player": "^0.11.1",
     "react-native-splash-screen": "^3.2.0"
   },
   "devDependencies": {
