--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-onesignal": "^4.3.1",
     "react-native-push-notification": "^8.1.0",
     "react-native-sound-player": "^0.11.1",
-    "react-native-splash-screen": "^3.2.0"
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
