--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-onesignal": "^4.3.1",
     "react-native-push-notification": "^8.1.0",
+    "react-native-scaling": "^1.0.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-snackbar": "^2.4.0",
     "react-native-snackbar-component": "^1.1.12",
     "react-native-sound-player": "^0.11.1",
